--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "xyplug-ai",
-	"version": "1.0.4",
-	"description": "An AI prompt plugin for the xyOps workflow automation system.",
+	"version": "1.0.5",
+	"description": "An AI generation plugin for the xyOps workflow automation system.",
 	"author": "Joseph Huckaby <jhuckaby@pixlcore.com>",
 	"homepage": "https://github.com/pixlcore/xyplug-ai",
 	"license": "MIT",
